Moved everything in oct/ into cpp/matlab/.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@55 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/configure.ac
+++ b/cpp/configure.ac
@@ -70,6 +70,7 @@ AC_CONFIG_FILES([Makefile
                  srvf/Makefile
                  src/Makefile
                  tests/Makefile
+                 tests/data/Makefile
                  plot/Makefile
                  demos/Makefile
                  demos/pmatch/Makefile
