Re-wrote README file
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@58 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,8 @@ endif
 
 SUBDIRS=srvf src tests $(MAYBE_PLOT) demos
 
+EXTRA_DIST=matlab/*.cc matlab/*.m
+
 bindistdir=$(PACKAGE)-$(VERSION)-bin
 bindist: $(DISTFILES)
 	mkdir -p $(bindistdir)
