--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-# http://www.gnu.org/software/automake
-
-Makefile.in
-
-# http://www.gnu.org/software/autoconf
-
-/autom4te.cache
-/aclocal.m4
-/compile
-/configure
-/depcomp
-/install-sh
-/missing
-
+# ignore CMake output
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
 
 # ignore build products
 *.o
