--- a/matlab/Makefile
+++ b/matlab/Makefile
@@ -1,6 +1,6 @@
-SRVF_LIBDIR=../src/.libs
+SRVF_LIBDIR=..
 SRVF_LIBS=-lsrvf
-SRVF_INCDIR=..
+SRVF_INCDIR=../src/include
 
 # Change this to the command for compiling MEX files on your system.
 MEXCMD=mkoctfile --mex
@@ -12,7 +12,7 @@ MEXFILES=srvf_fa_groupwise_reparam.mex srvf_fa_karcher_mean.mex srvf_fa_optimal_
 # library has been built but not installed.  Other libraries are 
 # still linked dynamically.
 %.mex: %.cc
-	$(MEXCMD) -I$(SRVF_INCDIR) -L$(SRVF_LIBDIR) $< -Wl,-static $(SRVF_LIBS) -Wl,-Bdynamic -lgsl -lgslcblas
+	$(MEXCMD) -I$(SRVF_INCDIR) -L$(SRVF_LIBDIR) $< $(SRVF_LIBS) -lgsl -lgslcblas
 
 all: $(MEXFILES)
 
